# fprettify

./: .codeclimate.yml  .gitignore  .landscape.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .travis.yml  INSTALL.txt  LICENSE  README.md  README.rst  environment.yml  fparse_utils.py  fprettify.py  pyproject.toml  requirements.txt  run_tests.py  setup.cfg  setup.py  tests.py
.github/workflows/: release.yml  static_analysis.yml  test.yml
.travis/: prep_cp2k.sh  prep_cron.sh  prep_flap.sh  prep_regular.sh  prep_rosetta.sh  prep_wannier90.sh  sitecustomize.py
examples/: example_after.f90  example_before.f90  fortran_after.f90
examples/after/: example.f90
examples/in/: example.f90  example_swapcase.f90  test_fypp.f90  test_namelist_block_select.f90
examples/test_results/: expected_results
formatting/: normalizeFortranFile.py
fortran_tests/: externalTestCode.config  testsuites.config
fortran_tests/after/: another_example.f90  example.f90  example_swapcase.f90  example_swapcase.f90-enabled  invalid.f90  quadruple.f90  test-end-command-separator  test_fypp.f90  test_fypp_preprocessor  test_invalid.f90  where_forall.f90
fortran_tests/before/: example.f90  invalid.f90  quadruple.f90  test-end-command-separator  test_fypp.f90  test_fypp_preprocessor  where_forall.f90
fortran_tests/test_results/: expected_results
fprettify/: __init__.py  aligner.py  constants.py  exceptions.py  formatter.py  fparse_utils.py  indenter.py  parser.py  preprocessor.py  utils.py  version.py
fprettify/tests/: __init__.py  fortrantests.py  test_common.py  unittests.py
