[metadata]
name = fprettify
url = https://github.com/pseewald/fprettify
author = Patrick Seewald
author_email = patrick.seewald@gmail.com
description = auto-formatter for modern fortran source code
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Quality Assurance
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Environment :: Console
    Operating System :: OS Independent
keywords =
    fortran
    formatter
project_urls =
    Tracker = https://github.com/pseewald/fprettify/issues
    Source Code = https://github.com/pseewald/fprettify

[options]
packages = find:
python_requires = >= 3.6
install_requires =
    configargparse
    importlib-metadata; python_version < "3.8"

[options.entry_points]
console_scripts =
    fprettify = fprettify.__init__:run

[options.extras_require]
dev =
    black
    isort
    pre-commit
    coveralls

[flake8]
max-line-length = 88
extend-ignore = E203, E722
